Created a three-column fixed layout

--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
           maiores alias consequatur aut perferendis doloribus asperiores repellat.
         </p>
       </div>
+      <aside id="sidebar">
+        <div class="wide-skyscaper-ad">Advertisement</div>
+      </aside>
       <footer>
         <p>&copy; Copyright by David Rivas</p>
       </footer>
